examples/service-istio-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  clusterIP: 100.65.182.57
  externalTrafficPolicy: Local
  healthCheckNodePort: 30566
  ports:
  - name: status-port
    nodePort: 32543
    port: 15020
    protocol: TCP
    targetPort: 15020
  - name: http2
    nodePort: 31807
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 31627
    port: 443
    protocol: TCP
    targetPort: 443
  - name: kiali
    nodePort: 31886
    port: 15029
    protocol: TCP
    targetPort: 15029
  - name: prometheus
    nodePort: 30810
    port: 15030
    protocol: TCP
    targetPort: 15030
  - name: grafana
    nodePort: 32400
    port: 15031
    protocol: TCP
    targetPort: 15031
  - name: tracing
    nodePort: 31719
    port: 15032
    protocol: TCP
    targetPort: 15032
  - name: tls
    nodePort: 30928
    port: 15443
    protocol: TCP
    targetPort: 15443
  selector:
    app: istio-ingressgateway
    kapp.k14s.io/app: "1589444345635382000"
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 34.78.17.12
